--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
     "next": "14.2.3",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
