--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23"
   },
