--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@clerk/nextjs": "^5.1.3",
     "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
-    "next": "14.2.3",
+    "file-loader": "^6.2.0",
+    "next": "^14.2.3",
     "pure-react-carousel": "^1.30.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.5",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
