--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
     "file-loader": "^6.2.0",
+    "framer-motion": "^11.3.2",
     "next": "^14.2.3",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.3.1",
